...
  type: TransactionType;
  icon: string;
  color: string;
};

export const EXPENSE_CATEGORIES = [
  { id: 'food', label: 'Food', type: 'expense', icon: 'restaurant', color: BackgroundColors.violet },
  { id: 'transport', label: 'Transport', type: 'expense', icon: 'directions-car', color: BackgroundColors.brown },
  { id: 'home', label: 'Home', type: 'expense', icon: 'home', color: BackgroundColors.orange },
  { id: 'health', label: 'Health', type: 'expense', icon: 'favorite', color: BackgroundColors.red },
  { id: 'shopping', label: 'Shopping', type: 'expense', icon: 'shopping-cart', color: BackgroundColors.purpure },
  { id: 'entertainment', label: 'Entertainment', type: 'expense', icon: 'sports-esports', color: BackgroundColors.green },
  { id: 'bills', label: 'Bills', type: 'expense', icon: 'receipt-long', color: BackgroundColors.blue },
...
